# gb.nim

./: .gitignore  CMakeLists.txt  README.md  gbnim.nimble  main.c  nim.cfg
include/: bus.h  cartridge.h  cpu.h  fetcher.h  fifo.h  io.h  joypad.h  lcd.h  logger.h  mmu.h  ppu.h  registers.h  timer.h  types.h  utils.h  vbus.h
roms/: bootrom.gb
src/: bus.c  cartridge.c  cpu.c  fetcher.c  fifo.c  io.c  irq.nim  joypad.c  lcd.c  logger.c  main.nim  mmu.c  ppu.c  timer.c  vbus.c
src/emulator/: bus.nim  cartridge.nim  cpu.nim  headers.nim  io.nim  irq.nim  joypad.nim  memory.nim  mmu.nim  registers.nim  timer.nim  types.nim  utils.nim
src/emulator/graphics/: bus.nim  fetcher.nim  lcd.nim  ppu.nim
